# KNO

./: README.md  pyproject.toml
src/lab1/: mnist.py  mnist_model.keras
src/lab2/: zad1.py  zad2.py  zad3.py  zad4.py
src/lab3/: main.py  predict.py  raport.md
src/lab4/: best_tuned_model.keras  main.py  podsumowanie.md
