[project]
name = "kno"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argparse>=1.4.0",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "tensorboard>=2.20.0",
    "tensorflow>=2.20.0",
]
